@@ -1,5 +1,10 @@
 2012-03-23  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* Makefile (libc_common_src_files): Use strlen.S and strnlen.S
+	for x32.
+
+2012-03-23  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* Makefile (libc_common_src_files): Use strrchr.S for x32.
 
 2012-03-23  H.J. Lu  <hongjiu.lu@intel.com>
